// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HamburgerButton /> renders a hamburger button 1`] = `
HTMLCollection [
  .c0 {
  position: absolute;
  top: 1em;
  left: 1em;
  width: 1px;
  height: 1px;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  overflow: hidden;
}

<input
    class="c0"
    id="toggle"
    type="checkbox"
  />,
  .c0 {
  position: absolute;
  top: 1em;
  left: 1em;
  z-index: 1;
  width: 2em;
  height: 1.5em;
  cursor: pointer;
}

.c1 {
  top: 50%;
  margin-top: -2px;
  display: block;
  position: absolute;
  border-radius: 4px;
  width: 100%;
  height: 4px;
  background-color: currentColor;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  border-radius: 4px;
  width: 100%;
  height: 4px;
  background-color: currentColor;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  top: -10px;
  -webkit-transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
  transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
}

.c1::after {
  content: '';
  display: block;
  position: absolute;
  border-radius: 4px;
  width: 100%;
  height: 4px;
  background-color: currentColor;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  bottom: -10px;
  -webkit-transition: bottom 0.1s 0.25s ease-in,-webkit-transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
}

<label
    aria-label="Menü anzeigen"
    class="c0"
    for="toggle"
  >
    <span
      class="c1"
    />
  </label>,
]
`;

exports[`<HamburgerButton /> toggles the hamburger button on change 1`] = `
.c0 {
  position: absolute;
  bottom: 1em;
  right: 1em;
  width: 1px;
  height: 1px;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  overflow: hidden;
}

.c1 {
  position: absolute;
  bottom: 1em;
  right: 1em;
  z-index: 1;
  width: 2em;
  height: 1.5em;
  cursor: pointer;
}

.c2 {
  top: 50%;
  margin-top: -2px;
  display: block;
  position: absolute;
  border-radius: 4px;
  width: 100%;
  height: 4px;
  background-color: currentColor;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border-radius: 4px;
  width: 100%;
  height: 4px;
  background-color: currentColor;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  top: -10px;
  -webkit-transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
  transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
}

.c2::after {
  content: '';
  display: block;
  position: absolute;
  border-radius: 4px;
  width: 100%;
  height: 4px;
  background-color: currentColor;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  bottom: -10px;
  -webkit-transition: bottom 0.1s 0.25s ease-in,-webkit-transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
}

<div>
  <input
    class="c0"
    id="toggle"
    type="checkbox"
  />
  <label
    aria-label="Menü anzeigen"
    class="c1"
    for="toggle"
  >
    <span
      class="c2"
    />
  </label>
</div>
`;

exports[`<HamburgerButton /> toggles the hamburger button on change 2`] = `
<div>
  <input
    class="sc-AxjAm cTSWeR"
    id="toggle"
    type="checkbox"
  />
  <label
    aria-label="Menü ausblenden"
    class="sc-AxirZ dxnnsi"
    for="toggle"
  >
    <span
      class="sc-AxiKw entMdp"
    />
  </label>
</div>
`;
